--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,10 @@ body {
   --comment_textarea_shadow: 0px 0px 5px 2px rgba(139, 139, 139, 0.1);
 }
 
+.pointer {
+  cursor: pointer;
+}
+
 .flex {
   display: var(--flex);
 }
@@ -184,6 +188,10 @@ body {
   padding: var(--2);
 }
 
+.margin_top_1rem {
+  margin-top: 1rem;
+}
+
 .width100 {
   width: 100%;
 }
@@ -206,12 +214,20 @@ body {
   font-size: 15px;
 }
 
+.font16 {
+  font-size: var(--16px);
+}
+
 .font20 {
   font-size: 20px;
 }
 
 .font24 {
   font-size: 24px;
+}
+
+.fontW700 {
+  font-weight: 700;
 }
 
 .black_text {
