Creating home page screen

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,5 +1,6 @@
 .footer {
-  background-color: #eebec0;
+  background-color: #7fbafc;
+  /* background-color: #eebec0; */
   padding: 5% 0;
   .footer_links {
     justify-content: space-evenly;
