--- a/src/components/cart/cart_modal.css
+++ b/src/components/cart/cart_modal.css
@@ -18,7 +18,8 @@
     padding: 0 0 1rem 0;
 
     .card_header {
-      background: #eebec0;
+      background: #7fbafc;
+      /* background: #eebec0; */
       text-align: center;
       position: sticky;
       top: 0;
@@ -72,7 +73,8 @@
     }
     .checkout_btn {
       border: none;
-      background: #eebec0;
+      background: #7fbafc;
+      /* background: #eebec0; */
     }
     .visa_mastarcard {
       background: linear-gradient(to right, #f4f4f4, #a5a5a5);
