--- a/src/components/home_page/styles.css
+++ b/src/components/home_page/styles.css
@@ -26,3 +26,49 @@
     /* padding: 0.5rem; */
   }
 }
+
+.second_section {
+  width: 100%;
+  padding: 2rem 5%;
+  h3 {
+    font-size: 35px;
+  }
+  .categories {
+    flex-wrap: wrap;
+    width: 100%;
+
+    .category {
+      width: calc((100% - 1.5rem) / 4);
+      /* flex-grow: 1; */
+      height: 400px;
+      .img_div {
+        height: 300px;
+        width: 100%;
+        overflow: hidden;
+        border-radius: 8px 8px 0 0;
+
+        img {
+          height: 300px;
+          width: 100%;
+          object-fit: cover;
+          transition: 0.4s ease-in-out;
+        }
+      }
+
+      p {
+        background-color: #f3f3f3;
+        height: 100px;
+        padding: 1rem;
+        border-radius: 0 0 8px 8px;
+      }
+    }
+    .category:hover img {
+      transform: scale(1.05);
+      transition: 0.4s ease-in-out;
+    }
+    .category:hover p {
+      text-decoration: underline;
+      transition: 0.4s ease-in-out;
+    }
+  }
+}
