--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -35,6 +35,7 @@
   .nav_container {
     position: sticky;
     top: 0;
+    z-index: 999;
     .footer_sub_container {
       width: 90%;
       .mobile_view {
