backgrund image edited

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #b2d6ff;
+  background-color: #eb9df5;
   /* background-color: #eebec0; */
   padding: 5% 0;
   .footer_links {
