--- a/src/components/home_page/styles.css
+++ b/src/components/home_page/styles.css
@@ -4,7 +4,7 @@
       rgba(255, 255, 255, 0.5),
       rgba(252, 252, 252, 0.5)
     ),
-    url(../../assets/rand.jpg);
+    url(../../assets/purple2.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
