--- a/src/components/home_page/styles.css
+++ b/src/components/home_page/styles.css
@@ -95,6 +95,7 @@
   overflow-x: auto;
   padding-bottom: 1rem;
   height: 100%;
+  margin-left: 5rem;
 }
 
 .slides_carousel {
@@ -131,6 +132,7 @@
 
 .third_section h3 {
   font-size: 24px;
+  margin-left: 5rem;
 }
 
 .third_section .view_category_btn {
