--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,6 +1,9 @@
 .nav_container {
   background: #fff;
   border-bottom: 1px solid #edecec;
+  position: sticky;
+  top: 0;
+  z-index: 9999;
   .footer_sub_container {
     width: 70%;
     padding: 1.2rem 0;
@@ -27,8 +30,10 @@
 
 .logo {
   height: 30px;
-  width: 100px;
-  object-fit: contain;
+  width: 150px;
+  /* object-fit: contain; */
+  border: 2px solid #eb9df5;
+  padding: 0.2rem;
 }
 
 @media (min-width: 200px) and (max-width: 767px) {
