--- a/src/components/home_page/styles.css
+++ b/src/components/home_page/styles.css
@@ -4,7 +4,7 @@
       rgba(255, 255, 255, 0.5),
       rgba(252, 252, 252, 0.5)
     ),
-    url(../../assets/bg-purple.jpg);
+    url(../../assets/bgmain.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -19,7 +19,7 @@
   }
 
   button {
-    /* background: initial; */
+    background: initial;
     border: none;
     border-radius: 6px;
     padding: 0.75rem;
