--- a/src/components/home_page/styles.css
+++ b/src/components/home_page/styles.css
@@ -96,7 +96,7 @@
   overflow-x: auto;
   padding-bottom: 1rem;
   height: 100%;
-  margin-left: 5rem;
+  /* margin-left: 5rem; */
 }
 
 .slides_carousel {
@@ -106,29 +106,6 @@
 .slides_carousel img {
   height: 250px;
   width: 250px;
-  border-radius: 8px 8px 0 0;
-  margin-bottom: 1rem;
-  object-fit: cover;
-}
-
-.slides_carousel p {
-  font-size: 18px;
-  padding: 0.5rem 1rem;
-  text-align: start;
-  letter-spacing: 1px;
-}
-
-.slides_carousel .in_stock {
-  margin: auto 1rem 1rem 1rem;
-  border-radius: 6px;
-  border: 1px solid #000000;
-}
-
-.slides_carousel .out_stock {
-  margin: auto 1rem 1rem 1rem;
-  color: #6b6b6b;
-  border-radius: 6px;
-  border: 1px solid #6b6b6b;
 }
 
 .third_section h3 {
@@ -188,9 +165,6 @@
       img {
         height: 200px;
       }
-      p {
-        font-size: 13px;
-      }
     }
   }
 
@@ -219,5 +193,9 @@
     line-height: 34px;
     width: 100%;
     text-align: center;
+  }
+
+  .third_section section {
+    margin-left: 0;
   }
 }
