--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,15 @@ body {
   --comment_textarea_shadow: 0px 0px 5px 2px rgba(139, 139, 139, 0.1);
 }
 
+.sticky {
+  position: sticky;
+  top: 0;
+}
+
+.relative {
+  position: relative;
+}
+
 .pointer {
   cursor: pointer;
 }
