--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,3 +1,7 @@
+.big_nav_container {
+  z-index: 9999;
+}
+
 .nav_container {
   background: #fff;
   border-bottom: 1px solid #edecec;
@@ -56,7 +60,7 @@
   left: 0;
   top: 5vh;
   min-width: 350px;
-  background: #f4f4f4;
+  background: #fff;
   padding: 2rem 1rem;
   border-radius: 0.5rem;
   min-height: 100%;
