--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,27 @@ body {
   --comment_textarea_shadow: 0px 0px 5px 2px rgba(139, 139, 139, 0.1);
 }
 
+.reviewButton {
+  padding: 0.5rem 1rem;
+  font-size: 16px;
+  border: 1px solid #e32aff;
+  border-radius: 6px;
+  background-color: #e1cde4;
+  width: fit-content;
+}
+
+.stars {
+  color: #fed316;
+}
+
+.color_initial {
+  color: initial;
+}
+
+.red {
+  color: #fd4f4f;
+}
+
 .sticky {
   position: sticky;
   top: 0;
