--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,4 +1,4 @@
-.big_nav_container {
+/* .big_nav_container {
   z-index: 9999;
 }
 
@@ -180,5 +180,32 @@
 
   .nav_search_cart {
     gap: 1.5rem;
+  }
+} */
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0.2rem 10%;
+  background: #000;
+  color: #fff;
+  position: relative;
+
+  h3 {
+    margin: auto;
+    font-size: 16px;
+    position: absolute;
+    top: 0.2rem;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  div {
+    display: flex;
+    gap: 1rem;
+    font-size: 14px;
+    margin: 0 0 0 auto;
   }
 }
