--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -191,7 +191,8 @@
   padding: 0.2rem 10%;
   background: #000;
   color: #fff;
-  position: relative;
+  position: fixed;
+  z-index: 9999;
 
   h3 {
     margin: auto;
@@ -202,10 +203,92 @@
     transform: translateX(-50%);
   }
 
-  div {
+  > div {
     display: flex;
     gap: 1rem;
     font-size: 14px;
     margin: 0 0 0 auto;
+  }
+
+  .cart_icon {
+    position: relative;
+
+    .cart_no_of_items {
+      position: absolute;
+      top: 0px;
+      font-size: 10px;
+      right: 0px;
+      background-color: red;
+      height: 10px;
+      width: 10px;
+      border-radius: 50%;
+    }
+  }
+}
+
+.sec_nav_container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin-top: 2rem;
+  .sec_nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 10%;
+    border-bottom: 1px solid #e9e9e9;
+
+    h2 {
+      font-size: 24px;
+      font-weight: 800;
+    }
+
+    .sec_nav_sub_item_div {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 0.3rem;
+      .cta {
+        font-size: 15px;
+        font-weight: 700;
+      }
+      .cta_action {
+        display: flex;
+        gap: 0.5rem;
+      }
+      .cta_list {
+        font-size: 13px;
+        font-weight: 600;
+      }
+    }
+  }
+
+  .navigations {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid #e9e9e9;
+    padding-bottom: 0.5rem;
+
+    p {
+      font-size: 13px;
+      font-weight: 700;
+    }
+
+    a {
+      font-size: 13px;
+      font-weight: 700;
+      color: #000;
+    }
+
+    button {
+      font-size: 13px;
+      font-weight: 700;
+      padding: 0.1rem 0.25rem;
+      border: none;
+      background: #000;
+      color: #fff;
+    }
   }
 }
