--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -10,57 +10,6 @@ main {
   padding-bottom: 4rem;
 }
 
-.sec_nav_container {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-  .sec_nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 10%;
-    border-bottom: 1px solid #e9e9e9;
-
-    h2 {
-      font-size: 24px;
-      font-weight: 800;
-    }
-
-    .sec_nav_sub_item_div {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 0.3rem;
-      .cta {
-        font-size: 15px;
-        font-weight: 700;
-      }
-      .cta_action {
-        display: flex;
-        gap: 0.5rem;
-      }
-      .cta_list {
-        font-size: 13px;
-        font-weight: 600;
-      }
-    }
-  }
-
-  .navigations {
-    display: flex;
-    gap: 1rem;
-    justify-content: center;
-    align-items: center;
-    border-bottom: 1px solid #e9e9e9;
-    padding-bottom: 0.5rem;
-
-    p {
-      font-size: 13px;
-      font-weight: 700;
-    }
-  }
-}
-
 .img_div {
   height: 500px;
   width: 100%;
@@ -124,14 +73,16 @@ main {
     position: absolute;
     left: 0;
 
-    .ctrl:nth-child(1) {
+    .active_image_tab {
       background-color: #9f9f9f;
+    }
+    .in_active_image_tab {
+      background: #5d5d5d;
     }
     .ctrl {
       z-index: 999;
       height: 6px;
       width: 20px;
-      background: #5d5d5d;
       border-radius: 7px;
     }
   }
@@ -173,15 +124,17 @@ main {
     width: 70%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
     padding-top: 3rem;
     flex-wrap: wrap;
+    gap: 2.5%;
 
     .selected_product_section_item {
       width: 18%;
       background-color: #ccc;
       margin-bottom: 1rem;
       color: #2f2f2f;
+      box-sizing: border-box;
       .selected_product_section_item_image {
         width: 100%;
         aspect-ratio: 1/1;
