--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -229,6 +229,7 @@
 .sec_nav_container {
   display: flex;
   flex-direction: column;
+  position: relative;
   gap: 0.5rem;
   margin-top: 2rem;
   .sec_nav {
@@ -290,5 +291,25 @@
       background: #000;
       color: #fff;
     }
+  }
+}
+
+.collections_hover_div {
+  position: fixed;
+  left: 0;
+  top: 5vh;
+  left: 50%;
+  transform: translateX(-50%);
+  min-width: 350px;
+  background: #fff;
+  padding: 2rem 1rem;
+  border-radius: 0.5rem;
+  /* min-height: 100%; */
+  z-index: 99999;
+  height: fit-content;
+
+  a {
+    color: #111;
+    font-size: 14px;
   }
 }
