--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -143,16 +143,20 @@ main {
       .selected_product_section_item_price {
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
         flex-direction: column;
-        gap: 0.5rem;
+        gap: 0.3rem;
         padding: 0.8rem;
         h4 {
           font-size: 14px;
+          font-weight: 400;
         }
         p {
           font-size: 13px;
-          font-weight: 900;
+        }
+        > p:nth-child(2) {
+          font-weight: 600;
+          font-size: 18px;
         }
       }
     }
