--- a/src/components/skeleton/style.css
+++ b/src/components/skeleton/style.css
@@ -89,3 +89,42 @@
     background-color: #989898;
   }
 }
+
+/*---------- GRID SKELETON ----------- */
+
+.grid_skeleton_container {
+  display: grid;
+  grid-template-columns: repeat(9, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  height: 500px;
+  width: 70%;
+  background: #fff;
+  margin: auto;
+  gap: 1em;
+
+  > div {
+    overflow: hidden;
+    position: relative;
+    background-color: #a4a4a4;
+    animation: beep 0.5s infinite alternate;
+  }
+  > :nth-child(1) {
+    grid-column: 1 / 4;
+    grid-row: 1 / 7;
+  }
+
+  > :nth-child(2) {
+    grid-column: 4 / 7;
+    grid-row: 1 / 4;
+  }
+
+  > :nth-child(3) {
+    grid-column: 4 / 7;
+    grid-row: 4 / 7;
+  }
+
+  > :nth-child(4) {
+    grid-column: 7 / 10;
+    grid-row: 1 / 7;
+  }
+}
