--- a/src/App.css
+++ b/src/App.css
@@ -69,9 +69,10 @@ body {
 .reviewButton {
   padding: 0.5rem 1rem;
   font-size: 16px;
-  border: 1px solid #e32aff;
+  border: 1px solid #000;
   border-radius: 6px;
-  background-color: #e1cde4;
+  background-color: #000;
+  color: #fff;
   width: fit-content;
 }
 
