--- a/src/components/details/styles.css
+++ b/src/components/details/styles.css
@@ -31,7 +31,8 @@
 .product_details_desc_div > button {
   padding: 1rem 1rem;
   border: none;
-  background: #eb9df5;
+  background: #000;
+  color: #fff;
   border-radius: 8px;
   font-size: 16px;
 }
