--- a/src/components/home_page/collection.css
+++ b/src/components/home_page/collection.css
@@ -182,3 +182,32 @@
     }
   }
 }
+
+@media (min-width: 200px) and (max-width: 767px) {
+  .grid_container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 12px;
+    height: auto;
+
+    > div {
+      width: 100%;
+      height: 250px;
+
+      .grid1_textx {
+        > p {
+          font-size: 14px;
+        }
+        .grid1_cta {
+          h3 {
+            font-size: 26px;
+          }
+          p {
+            font-size: 14px;
+          }
+        }
+      }
+    }
+  }
+}
