--- a/src/components/skeleton/style.css
+++ b/src/components/skeleton/style.css
@@ -1,7 +1,7 @@
 .container {
   display: grid;
   gap: 1rem;
-  grid-template-columns: repeat(auto-fill, minmax(19%, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   padding: 20px;
   width: 80%;
   margin: 4rem auto;
@@ -126,5 +126,26 @@
   > :nth-child(4) {
     grid-column: 7 / 10;
     grid-row: 1 / 7;
+  }
+}
+
+@media (min-width: 200px) and (max-width: 767px) {
+  .container {
+    padding: 0;
+    margin: 0 auto;
+    width: 95%;
+  }
+
+  .grid_skeleton_container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    width: 100%;
+    padding: 2rem;
+
+    > div {
+      width: 100%;
+      height: 150px;
+    }
   }
 }
